src/objects/CPQ_Approver__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <formula>User__r.IsActive</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Group</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Q__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Checkbox is for Indirect Approval List and this should be true in case of Indirect Quote</description>
        <label>Indirect Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portfolio</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sequence</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPQ_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CPQ Approver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_View</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>BG__c</columns>
        <columns>Seq__c</columns>
        <columns>A__c</columns>
        <filterScope>Everything</filterScope>
        <label>All View</label>
    </listViews>
    <nameField>
        <displayFormat>CPQA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>